Refining jobs page (illustration/css/html)

--- a/site/lib/scss/breakpoints/768up.scss
+++ b/site/lib/scss/breakpoints/768up.scss
@@ -134,3 +134,10 @@ FOOTER
         }
 
     }
+
+/******************************************************************
+Encrypted mail
+******************************************************************/
+.cryptmail {
+    font-size: .9em;
+}
