--- a/site/lib/scss/base.scss
+++ b/site/lib/scss/base.scss
@@ -138,6 +138,7 @@ POST LISTING
         ol {
             margin-top:0;
             margin-bottom:0;
+        }
 
             li {
                 list-style-type: none;
@@ -150,7 +151,6 @@ POST LISTING
                 font-weight: bold;
                 font-size: 0.8em;
             }
-        }
 
         /* Quotes/Citations */
         blockquote {
@@ -279,3 +279,20 @@ Share This (fix)
 ******************************************************************/
 .stHBubble { height: 22px!important; background: $white!important;}
 .stMainServices { height: 24px!important;}
+
+
+/******************************************************************
+Encrypted mail
+******************************************************************/
+.crypt-cont { width: 100%; text-align: center;}
+.cryptmail {
+    display: inline-block;
+    border: 3px $lightgray dashed;
+    border-radius: 6px;
+    text-align: center;
+    font-family: Consolas, Monaco, 'Andale Mono', monospace;
+    padding: 2em;
+    background: #f0f2f7;
+    margin-top: 2em;
+    font-size: .8em;
+}
