Adds CTA on mobile

--- a/site/lib/scss/breakpoints/768up.scss
+++ b/site/lib/scss/breakpoints/768up.scss
@@ -135,6 +135,10 @@ FOOTER
 
     }
 
+/* Disable Mobile CTA */
+p.mobile-cta { display: none!important }
+
+
 /******************************************************************
 Encrypted mail
 ******************************************************************/
