--- a/site/lib/scss/base.scss
+++ b/site/lib/scss/base.scss
@@ -244,7 +244,7 @@ IMAGES
 FOOTER
 ******************************************************************/
 .footer {
-    margin-top: 3em;
+    margin-top: 0;
     padding: 0 24px 48px;
     color: $gray;
     line-height: 18px;
@@ -273,6 +273,29 @@ FOOTER
         }
     }
 
+	/* CTA (mobile ONLY) */
+    p.mobile-cta {
+        width: 100%;
+        text-align: center;
+        padding-top: 2em;
+        margin-bottom: 0px;
+
+        .cta {
+            display: inline-block;
+            padding: 11px 16px;
+            line-height: 1;
+            color: $blue;
+            border-radius: 30px;
+            border: 2px solid $blue;
+            @include transition(border-color .2s, color .2s);
+            text-decoration: none;
+            width: 100%;
+            max-width: 260px;
+            margin: 0 auto;
+
+            span { margin-left: 2px; }
+        }
+    }
 
 /******************************************************************
 Share This (fix)
