Less lines, more space.

--- a/site/lib/scss/base.scss
+++ b/site/lib/scss/base.scss
@@ -320,3 +320,11 @@ Encrypted mail
     margin-top: 2em;
     font-size: .8em;
 }
+
+
+/******************************************************************
+Disqus
+******************************************************************/
+#disqus_thread {
+	margin-top: 48px;
+}
