Updated the logo and footer
Updated the logo and footer

--- a/site/lib/scss/base.scss
+++ b/site/lib/scss/base.scss
@@ -11,6 +11,22 @@ body {
     overflow-x: hidden;
 }
 
+.logo-dark-gray { 
+	color:#656565;
+	font-weight:600;
+}
+
+.logo-light-gray { 
+	color:#999999; 
+	font-weight:600;
+}
+
+#logo-svg{
+	width: 140px;
+	position: relative;
+	top: 3px;
+}
+
 /******************************************************************
 SOME DEFAULTS
 ******************************************************************/
