changed the footer
changed the footer logo to an image.

--- a/site/lib/scss/base.scss
+++ b/site/lib/scss/base.scss
@@ -11,22 +11,6 @@ body {
     overflow-x: hidden;
 }
 
-.logo-dark-gray { 
-	color:#656565;
-	font-weight:600;
-}
-
-.logo-light-gray { 
-	color:#999999; 
-	font-weight:600;
-}
-
-#logo-svg{
-	width: 140px;
-	position: relative;
-	top: 3px;
-}
-
 /******************************************************************
 SOME DEFAULTS
 ******************************************************************/
@@ -270,8 +254,14 @@ FOOTER
     .company {
         font-weight: 700;
         line-height: 2;
+		position: relative;
+  		top: 4px;
     }
-
+	
+	.company a img{
+		width:150px;
+	}
+	
     .rightsreserved {
         white-space: nowrap
     }
