Fix logo font size.

--- a/site/lib/scss/base.scss
+++ b/site/lib/scss/base.scss
@@ -14,11 +14,13 @@ body {
 .logo-dark-gray { 
 	color:#656565;
 	font-weight:600;
+	font-size: 30px;
 }
 
 .logo-light-gray { 
 	color:#999999; 
 	font-weight:600;
+	font-size: 30px;
 }
 
 #logo-svg{
