Fixed Java code formatting

--- a/site/lib/scss/base.scss
+++ b/site/lib/scss/base.scss
@@ -209,7 +209,7 @@ POST LISTING
             background: none;
         }
 
-        .java-code {
+        .xml-code {
             white-space: pre-wrap;       /* CSS 3 */
             white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
             white-space: -pre-wrap;      /* Opera 4-6 */
