--- a/site/lib/scss/base.scss
+++ b/site/lib/scss/base.scss
@@ -209,6 +209,10 @@ POST LISTING
             background: none;
         }
 
+        .small {
+            font-size: 0.6em;
+        }
+
         /* Post footer */
         .byline {
             display: inline-block;
